--- a/package.json
+++ b/package.json
@@ -8,8 +8,24 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prismicio/client": "^4.0.0",
+    "@stripe/stripe-js": "^1.14.0",
+    "axios": "^0.21.1",
+    "faunadb": "^4.2.0",
     "next": "10.2.0",
+    "next-auth": "^3.22.0",
+    "prismic-dom": "^2.2.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "sass": "^1.32.13",
+    "stripe": "^8.148.0"
+  },
+  "devDependencies": {
+    "@types/next-auth": "^3.15.0",
+    "@types/node": "^15.0.3",
+    "@types/prismic-dom": "^2.1.1",
+    "@types/react": "^17.0.5",
+    "typescript": "^4.2.4"
   }
 }
